<resources>
    <string name="app_name">Randox CertiFly</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faq_heading">How to use Randox-Certifly?</string>
    <string name="no_record_text">You have no certificates yet. Result certificates will appear here once they are available.</string>
    <string name="certificate_type_heading">Please choose test type:</string>
    <string name="fit_to_travel">Fit to travel</string>
    <string name="days_2">UK Day 2 arrival</string>
    <string name="agree_text">Agree</string>
    <string name="how_many_days_you_were_vaccinated">Has it been 14 or more days since you have been fully vaccinated in a UK approved vaccination program ?</string>
    <string name="missing_permissions">Missing Permissions</string>
    <string name="no_close_the_app">NO Close The App</string>
    <string name="you_have_to_grant_permissions">You have to grant permissions in order to use this App</string>
    <string name="ok">OK</string>
    <string name="remaining_time_heading">Time Remaining</string>
    <string name="remaining_time_sub_text">You must wait 15 mins. For the test results to display.</string>
    <string name="skip_timer"><u>Skip to submit test</u></string>
    <string name="note">All results must be submitted within 15 to 30 minutes of taking test</string>
    <string name="conduct">Conduct your test</string>
    <string name="conduct_message">Wash your hands, unpack your kit on a clean surface, and follow the instructions in the pack.</string>
    <string name="test_taker">Test taker name</string>
    <string name="date">Date of the test</string>
    <string name="time">Time of the test</string>
    <string name="confirm_test">Please Confirm that the details mentioned above are correct.</string>
    <string name="confirm_time">Please Select a time between current time and 30 minute from the current time.</string>
    <string name="permission_heading">User Consent</string>
    <string name="permission_consent_data">We will ask you to allow us to access the mobile device’s camera and storage.\n<u><b>Camera permission</b></u> is required in order to register with the app by doing so it allows the user to scan his/her passport and we can verify his/her identity. We also use Camera for covid-19 rapid test device scanning that is used in the creation process of the Covid-19 certificate.\n The information we get from the rapid test device is as follows.\n
\u25BA Device QR code that helps us to identify that the device used by the user is genuine and also it is registered with our system.\n
\u25BA AI capability, to predict and locate position of our test device.\n
<u><b>Storage permission</b></u> is required in order to enable the user to store his/her certificate on the device.</string>
    <string name="agree_and_continue">Accept</string>
    <string name="allow">Allow</string>
    <string name="settings">Settings</string>
    <string name="not_now">Not now</string>
    <string name="web_terms_privacy">By continuing, you agree to the Randox Certifly <a href="https://www.randoxhealth.com/covid-19-terms-and-conditions">Terms of Service</a>. Please Note: The <a href="https://www.randoxhealth.com/randox-certifly-privacy-policy">Privacy Policy</a> describes how data is handled in this service.</string>
    <string name="is_available">Not currently available due to change in UK travel guidance.</string>
    <string name="buy_pcr_test">Please purchase your Day 2  PCR test at <font color='#0000FF'><a href="https://fly.randox.com/">https://fly.randox.com/</a></font> using coupon code &quot;Certifly&quot;.</string>
    <string name="description"><b>Updated November 2021</b>\nThis <a href="https://www.randoxhealth.com/randox-certifly-privacy-policy">Privacy Policy</a> (the “Policy”) describes our practices with respect to collection, use, disclosure and protection of your information when you use Randox CertiFly mobile application (the “App”). Note that this Policy is only valid on our App, not any third-party networks, even if they are referenced on our App. It is your responsibility to familiarize yourself and comply with any relevant third-party networks. </string>
    <string name="data_security_heading">Data Security</string>
    <string name="data_security_content">The security of your data is of utmost importance to us. Only our administrators are allowed to access our App’s password-protected server where any personal information which can help improve your experience, such as how often you perform workouts, what your weekly goals are, etc. We utilize SSL. Nevertheless, any transmission of information over the Internet has its inherent risks, so we cannot guarantee the absolute security of your personal information. Transmit personal information over the Internet at your own risk. We shall not be liable for circumvention of security measures or privacy settings on the App. It is your responsibility to keep your login credentials, if any, confidential. </string>
    <string name="data_collection_heading">Collection of User Data</string>
    <string name="data_collection_content">We will collect personal data as part of our online testing kit registration process. Registration is essential for all testing and reporting of results to proceed, and it is essential that you complete these details, and confirm your acceptance of this policy, personally.\n

        We will ask you to allow us to access the mobile device’s <b>camera</b> and <b>storage</b>.\n <b><u>Camera permission</u></b>  is required in order to register with the app by doing so it allows the user to scan his/her passport and we can verify the identity. We also use <b>Camera permission</b> for covid-19 rapid test device image scanning that is used in the creation process of Covide-19 certificate. The information we get from the device is QR code that helps us to identify that the device used by the user is genuine and also it is registered with our system.\n
        <b><u>Storage permission</u></b> is required in order to enable the user to store his/her certificate on the device.\n

        <b>The information we collect during registration includes:</b>\n

    \u25BAThe unique registration number (URN) on your test kit (it is very important that this is recorded correctly to ensure that your sample is correctly matched to your online registration);\n
    \u25BAYour name;\n
    \u25BAYour date of birth;\n
    \u25BAYour gender;\n
    \u25BAYour email address (it is very important that this is recorded correctly so that your results are sent to the right email address);\n
    \u25BAYour country / nationality;\n
    \u25BAYour telephone number;\n
    \u25BAThe date your sample was collected;\n
    \u25BAYour full home address (including postcode);\n
    \u25BAYour national insurance number (optional);\n
    \u25BAYour NHS / employee number (if applicable).\n
    \u25BAYour Vaccination Status\n
    \u25BAPassport image scan for identity verification\n

We will not collect any information which we, or relevant third parties, do not need.\n

Once your swab sample has been returned to us, and it has been tested for COVID-19, our systems will automatically generate a report which shows our findings (the Report). This Report will include some of the personal details that you have provided to us about yourself. We will also hold this information in a centralised database.\n

Please note that there are limitations inherent in the sample collection and testing process, which are explained in our terms and conditions here: https://www.randoxhealth.com/covid-19-terms-and-conditions, and in the test instructions that were provided to you when you received your test kit.\n

It is important that the personal data we hold about you is accurate and current, and we cannot be held responsible for incorrect data that is provided by you. Please keep us informed if your personal data changes during your relationship with us.\n

If you fail to properly provide all requested data or provide incorrect data we may be unable to provide testing or notify you of your results. There is also a risk that third parties could be inadvertently provided with your data if, for example, you have not correctly entered your email address, or your email servers are compromised.\n </string>
    <string name="use_of_data_heading">Use of Data</string>
    <string name="camera_permission_header">Camera access required</string>
    <string name="camera_permission_content_passport">Please allow to use Camera to scan your passport, this is used for identity verification.</string>
    <string name="uk_day2_terms_heading">UK Government Day 2 arrival scheme</string>
    <string name="uk_day2_terms_content"><font color="#ff5916">\u2605</font> Only for UK Government Day 2 arrival scheme\n<font color="#ff5916">\u2605</font> Only used AFTER your arrival into the UK\n<font color="#ff5916">\u2605</font> Needs your Passenger Locator Form booking reference\n<font color="#ff5916">\u2605</font> NOT for general travel\n<font color="#ff5916">\u2605</font> NOT a pre-departure test\n</string>
</resources>