<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/round_dialog"
    android:paddingHorizontal="@dimen/_16sdp"
    android:paddingTop="@dimen/_16sdp"
    >



    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/camera_permission_header"
        android:textColor="@color/black"
        android:fontFamily="@font/poppinsbold"
        android:includeFontPadding="false"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp16"
        app:layout_constraintTop_toBottomOf="@id/header_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/camera_permission_content_passport"
        android:fontFamily="@font/poppinsmedium"
        android:includeFontPadding="false"
        android:textSize="14sp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_allow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:text="@string/allow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsmedium"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/button_bg"
        app:layout_constraintTop_toBottomOf="@id/body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_not_now"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:visibility="gone"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/poppinsmedium"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/button_bg"
        app:layout_constraintTop_toBottomOf="@id/body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_not_now"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_not_now"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:text="@string/not_now"
        android:textSize="16sp"
        android:layout_marginEnd="@dimen/dp8"
        android:textColor="#505050"
        android:textAllCaps="false"
        android:fontFamily="@font/poppinsmedium"
        android:includeFontPadding="false"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/button_bg3"
        app:layout_constraintTop_toBottomOf="@id/body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/barrier"
        app:layout_constraintHorizontal_chainStyle="spread"
        />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="start"
        app:constraint_referenced_ids="btn_allow,btn_settings"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>