<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bwhite"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/bwhite"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingVertical="@dimen/_25sdp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_116sdp"
            android:layout_height="@dimen/_72sdp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/terms_heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/terms_content"
            app:layout_constraintVertical_chainStyle="packed"
            android:textAlignment="center"
            android:fontFamily="@font/poppinsregular"
            android:includeFontPadding="false"
            android:text="@string/uk_day2_terms_heading"
            android:textColor="@color/black"
            android:textSize="22sp"
            />

        <TextView
            android:id="@+id/terms_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppinslight"
            android:includeFontPadding="false"
            android:lineSpacingExtra="@dimen/dp8"
            android:text="@string/uk_day2_terms_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_agree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/terms_heading" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_agree"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp30"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppinsmedium"
            android:includeFontPadding="false"
            android:text="@string/agree_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/terms_content"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_75sdp"
            android:background="@drawable/button_bg2"
            android:fontFamily="@font/poppinsmedium"
            android:includeFontPadding="false"
            android:text="Cancel"
            android:textAllCaps="false"
            android:textColor="@color/sblue"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_agree"
            />








    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>