<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/_20sdp"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/content"
            android:src="@mipmap/ic_launcher_logo"
            app:layout_constraintVertical_chainStyle="packed"
            />




            <TextView
                android:id="@+id/app_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:layout_marginStart="@dimen/dp8"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:fontFamily="@font/poppinsbold"
                android:includeFontPadding="false"
                app:layout_constraintStart_toEndOf="@id/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/logo"
                app:layout_constraintBottom_toTopOf="@id/sub_text"
                app:layout_constraintVertical_chainStyle="packed"
                />

        <TextView
            android:id="@+id/sub_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#8a000000"
            android:text="will need to access"
            android:textSize="12sp"
            android:fontFamily="@font/poppinsmedium"
            android:includeFontPadding="false"
            app:layout_constraintStart_toStartOf="@id/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:layout_constraintBottom_toBottomOf="@id/logo"
            />

        <ScrollView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:background="@android:color/white"
            android:clipToPadding="true"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            app:layout_constraintTop_toBottomOf="@id/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_agree"
            >

            <include layout="@layout/permission_content"
                android:id="@+id/contentContainer"
                />


        </ScrollView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agree_and_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/poppinsmedium"
            android:includeFontPadding="false"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/button_bg"
            app:layout_constraintTop_toBottomOf="@id/content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/link"
            />
        <TextView
            android:id="@+id/link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16.25dp"
            android:text="@string/web_terms_privacy"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/btn_agree"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />






    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>